Clean-up and simplify Tracing-Options processing