@@ -17,15 +17,17 @@ package org.eclipse.pde.internal.core;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.nio.charset.Charset;
-import java.util.Enumeration;
-import java.util.Hashtable;
-import java.util.Iterator;
+import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.zip.ZipEntry;
@@ -36,69 +38,56 @@ import org.eclipse.pde.core.plugin.IPluginModelBase;
 import org.eclipse.pde.core.plugin.PluginRegistry;
 
 public class TracingOptionsManager {
-	private Properties template;
+	private Map<String, String> template;
 
 	public TracingOptionsManager() {
 		super();
 	}
 
-	private Properties createTemplate() {
-		Properties temp = new Properties();
-		IPluginModelBase[] models = PluginRegistry.getAllModels();
-		for (IPluginModelBase model : models) {
-			addToTemplate(temp, model);
-		}
-		return temp;
-	}
-
-	private void addToTemplate(Properties temp, IPluginModelBase model) {
-		Properties modelOptions = getOptions(model);
-		if (modelOptions != null) {
-			temp.putAll(modelOptions);
-		}
-	}
-
-	public Hashtable<String, String> getTemplateTable(String pluginId) {
-		Properties tracingTemplate = getTracingTemplate();
-		Hashtable<String, String> defaults = new Hashtable<>();
-		for (Enumeration<Object> keys = tracingTemplate.keys(); keys.hasMoreElements();) {
-			String key = keys.nextElement().toString();
+	public Map<String, String> getTemplateTable(String pluginId) {
+		Map<String, String> tracingTemplate = getTracingTemplate();
+		Map<String, String> defaults = new HashMap<>();
+		tracingTemplate.forEach((key, value) -> {
 			if (belongsTo(key, pluginId)) {
-				defaults.put(key, tracingTemplate.get(key).toString());
+				defaults.put(key, value);
 			}
-		}
+		});
 		return defaults;
 	}
 
 	private boolean belongsTo(String option, String pluginId) {
-		IPath path = IPath.fromOSString(option);
-		String firstSegment = path.segment(0);
+		String firstSegment = IPath.fromOSString(option).segment(0);
 		return pluginId.equalsIgnoreCase(firstSegment);
 	}
 
-	public Properties getTracingOptions(Map<String, String> storedOptions) {
+	public Map<String, String> getTracingOptions(Map<String, String> storedOptions) {
 		// Start with the fresh template from plugins
-		Properties defaults = getTracingTemplateCopy();
+		Map<String, String> defaults = getTracingTemplateCopy();
 		if (storedOptions != null) {
 			// Load stored values, but only for existing keys
-			Iterator<String> iter = storedOptions.keySet().iterator();
-			while (iter.hasNext()) {
-				String key = iter.next();
+			storedOptions.forEach((key, value) -> {
 				if (defaults.containsKey(key)) {
-					defaults.setProperty(key, storedOptions.get(key));
+					defaults.put(key, value);
 				}
-			}
+			});
 		}
 		return defaults;
 	}
 
-	public Properties getTracingTemplateCopy() {
-		return (Properties) getTracingTemplate().clone();
+	public Map<String, String> getTracingTemplateCopy() {
+		return new HashMap<>(getTracingTemplate());
 	}
 
-	private synchronized Properties getTracingTemplate() {
+	private synchronized Map<String, String> getTracingTemplate() {
 		if (template == null) {
-			template = createTemplate();
+			Map<String, String> temp = new HashMap<>();
+			IPluginModelBase[] models = PluginRegistry.getAllModels();
+			Arrays.stream(models).map(TracingOptionsManager::getOptions).filter(Objects::nonNull).forEach(p -> {
+				@SuppressWarnings({ "rawtypes", "unchecked" })
+				Map<String, String> entries = (Map) p;
+				temp.putAll(entries); // All entries are of String/String
+			});
+			template = temp;
 		}
 		return template;
 	}
@@ -129,32 +118,30 @@ public class TracingOptionsManager {
 		template = null;
 	}
 
-	private void save(String fileName, Properties properties) {
-		try (FileOutputStream stream = new FileOutputStream(fileName);) {
+	private void saveOptions(Path file, Map<String, String> entries) {
+		Properties properties = new Properties();
+		properties.putAll(entries);
+		try (OutputStream stream = Files.newOutputStream(file);) {
 			properties.store(stream, "Master Tracing Options"); //$NON-NLS-1$
-			stream.flush();
 		} catch (IOException e) {
 			PDECore.logException(e);
 		}
 	}
 
-	public void save(String filename, Map<String, String> map, Set<String> selected) {
-		Properties properties = getTracingOptions(map);
-		for (Enumeration<Object> keys = properties.keys(); keys.hasMoreElements();) {
-			String key = keys.nextElement().toString();
+	public void save(Path file, Map<String, String> map, Set<String> selected) {
+		Map<String, String> properties = getTracingOptions(map);
+		properties.keySet().removeIf(key -> {
 			IPath path = IPath.fromOSString(key);
-			if (path.segmentCount() < 1 || !selected.contains(path.segment(0))) {
-				properties.remove(key);
-			}
-		}
-		save(filename, properties);
+			return path.segmentCount() < 1 || !selected.contains(path.segment(0));
+		});
+		saveOptions(file, properties);
 	}
 
-	public void save(String filename, Map<String, String> map) {
-		save(filename, getTracingOptions(map));
+	public void save(Path file, Map<String, String> map) {
+		saveOptions(file, getTracingOptions(map));
 	}
 
-	private Properties getOptions(IPluginModelBase model) {
+	private static Properties getOptions(IPluginModelBase model) {
 		String location = model.getInstallLocation();
 		if (location == null) {
 			return null;
@@ -203,23 +190,22 @@ public class TracingOptionsManager {
 	 * support cases when: key is split in multiple lines; key use escape
 	 * characters; comment uses ! start char
 	 */
-	private void loadComments(InputStream stream, Properties modelOptions) throws IOException {
+	private static void loadComments(InputStream stream, Properties modelOptions) throws IOException {
 		String prevComment = ""; //$NON-NLS-1$
 		try (BufferedReader bufferedReader = new BufferedReader(
-				new InputStreamReader(stream, Charset.defaultCharset()))) {
-			String line;
-			while ((line = bufferedReader.readLine()) != null) {
+				// Properties.store() always uses ISO_8859_1 encoding
+				new InputStreamReader(stream, StandardCharsets.ISO_8859_1))) {
+			for (String line; (line = bufferedReader.readLine()) != null;) {
 				if (line.startsWith("#") || line.trim().isEmpty()) { //$NON-NLS-1$
 					prevComment += "\n" + line.trim(); //$NON-NLS-1$
 				} else {
-					if (prevComment.trim().isEmpty()) {
+					if (prevComment.isBlank()) {
 						continue;
 					}
-
 					int eq = line.indexOf('=');
 					if (eq >= 0) {
 						String key = line.substring(0, eq).trim();
-						modelOptions.put("#" + key, prevComment); //$NON-NLS-1$
+						modelOptions.put("#" + key, prevComment.strip()); //$NON-NLS-1$
 					}
 					prevComment = ""; //$NON-NLS-1$
 				}
